# ChessTest

./: .gitignore  CMakeLists.txt  main.cpp
